# EDGE-COVID19

## build 202201
* add VarSkip v2, VarSkip_long, artic v4.1, HiFiViral primer
* add OM131541 omicron reference
* add Lineage Abundance Prediction function based on RNA-Seq quantification.
* update custom bed file desc
* update pangolin to v3.1.20 and pangoLEARN to 2022-02-02
* update align_trim on ONT data to check correct primer pair
* update megahit from 1.1.3 to 1.2.9
* add IGV genome view using jgv.js 2.10.4

## build 20211217
* strand bias filter based on Fisher's Exact test score and symmetric odds
ratio test score
* update amplicov script to count unique primer region
* update pangolin to 3.1.17
* dynamic edge report generation
* udpate VOC for BA lineage
* fix potential serious bug which may delete EDGE_output projects
* fix bug: amplicov been skip
* fix indel event count on some cases
* update primer scheme, strand bias, lineage assignment result hover pop info

## build 20211130
* update Tomcat 7.0.92 to 7.0.109 for vulnerable patch
* update pangolin to 3.1.16
* fix bug on vaccined_received metadata parsing
* fix bug on consensus composition file parsing
* add Varskip primer scheme option for trimming
* fix SNP count for consensus
* update privacy policy
* use unlimit coverage to consensus
* align_trim on short amplicon reads length > amplicon size.  check the primer pair  name should be a set for trimming
* use align_trim bam file for downstream instead of rerun mapping again
* add varlog option for consensus workflow
* add homopolymer filter and strandBias filter for consensus workflow
* add option for panglin lineage assingment mode, usher or pangoLearn
* update VOC for B.1.1.1529 Omicron

## build 20211001
* cleanup intermediate files
* add privacy-policy info
* add projects report plots package and function
* add frameshift confirmation option for GISAID upload
* add cov tracker configuartion option and result page
* add GISAID/NCBI batch submit status check. append the exit screenshot to the log windown for submission 