@@ -1556,7 +1556,7 @@ echo "--------------------------------------------------------------------------
                         Installing vcftools $VER
 ------------------------------------------------------------------------------
 "
-$anaconda3bin/conda install -y -c bioconda vcftoos
+$anaconda3bin/conda install -y -c bioconda vcftools
 
 echo "
 ------------------------------------------------------------------------------
