@@ -1,14 +1,15 @@
 # EDGE-COVID19
 
-## build 202201
+## build 20220314
 * add VarSkip v2, VarSkip_long, artic v4.1, HiFiViral primer
 * add OM131541 omicron reference
 * add Lineage Abundance Prediction function based on RNA-Seq quantification.
 * update custom bed file desc
-* update pangolin to v3.1.20 and pangoLEARN to 2022-02-02
+* update pangolin to v3.1.20 and pangoLEARN to 2022-02-28
 * update align_trim on ONT data to check correct primer pair
 * update megahit from 1.1.3 to 1.2.9
 * add IGV genome view using jgv.js 2.10.4
+* update google chrome from 75.0.3767.0 to 95.0.4615.0
 
 ## build 20211217
 * strand bias filter based on Fisher's Exact test score and symmetric odds
